created the portfolio

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,6 @@
 								<li><a href="index.html"> Home</a></li>
 								<li><a href="about.html"> About</a></li>  
 								<li><a href="skills.html"> Skills</a></li>
-								<li><a href="experience.html">Experience</a></li> 
 								<li><a href="education.html">Education</a></li>
 								<li><a href="projects.html" class="active"> My Projects</a></li>							
 								<li><a href="contact.html"> Contact Us</a></li>
@@ -49,7 +48,7 @@
 						<a href="#" class="social-button twitter"><i class="fa fa-twitter"></i></a>
 						<a href="#" class="social-button facebook"><i class="fa fa-facebook"></i></a> 
 						<a href="#" class="social-button google"><i class="fa fa-google-plus"></i></a> 
-						<a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a> 
+						<a href="#" class="social-button dribbble"><i class="fa fa-linkedin"></i></a> 
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -78,11 +77,11 @@
 					<div class="agileits_w3layouts_gallery_grid1 w3layouts_gallery_grid1 hover14 column">
 						<div class="w3_agile_gallery_effect view view-tenth">
 							<a href="images/g1.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="My Projects">
-								<img src="images/g1.jpg" alt=" " class="img-responsive" />
+								<img src="images/Akan.png" alt=" " class="img-responsive" />
 								<div class="mask">
 									<h3>Akan Names</h3>
-									<p>At vero eoset accusamus et iusto odio ducimus.</p>
-									<button>Live Link</button>
+									<p>Generates your Akan Name</p>
+									<a href="https://skimanikings.github.io/Akan-Names/" target="_blank"><button type="button" class="btn btn-sm btn-outline-dark" >Explore</button></a>
 								</div>
 							</a>
 						</div>
@@ -90,10 +89,13 @@
 					<div class="agileits_w3layouts_gallery_grid1 hover14 column">
 						<div class="w3_agile_gallery_effect view view-tenth">
 							<a href="images/g2.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="My Projects">
-								<img src="images/g2.jpg" alt=" " class="img-responsive" />
+								<img src="images/Neighbourhood.png" alt=" " class="img-responsive" />
 								<div class="mask">
 									<h3>Neighbourhood</h3>
-									<p>At vero eoset accusamus et iusto odio ducimus.</p>
+									<p>Register to your Hood</p>
+									<a href="https://tinghoods.herokuapp.com/" target="_blank"><button type="button" class="btn btn-sm btn-outline-dark" >Explore</button></a>
+
+
 								</div>
 							</a>
 						</div>
@@ -101,10 +103,12 @@
 					<div class="agileits_w3layouts_gallery_grid1 hover14 column">
 						<div class="w3_agile_gallery_effect view view-tenth">
 							<a href="images/g3.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="My Projects">
-								<img src="images/g3.jpg" alt=" " class="img-responsive" />
+								<img src="images/Blog.png" alt=" " class="img-responsive" />
 								<div class="mask">
-									<h3>My projects</h3>
-									<p>At vero eoset accusamus et iusto odio ducimus.</p>
+									<h3>Blog</h3>
+									<p>Know what's trending.</p>
+									<a href="https://simkim.herokuapp.com/" target="_blank"><button type="button" class="btn btn-sm btn-outline-dark" >Explore</button></a>
+									
 								</div>
 							</a>
 						</div>
@@ -114,10 +118,12 @@
 					<div class="agileits_w3layouts_gallery_grid1 hover14 column">
 						<div class="w3_agile_gallery_effect view view-tenth">
 							<a href="images/g4.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="My Projects">
-								<img src="images/g4.jpg" alt=" " class="img-responsive" />
+								<img src="images/Quotes.png" alt=" " class="img-responsive" />
 								<div class="mask">
-									<h3>My projects</h3>
-									<p>At vero eoset accusamus et iusto odio ducimus.</p>
+									<h3>Quotes App</h3>
+									<p>Get daily motivations.</p>
+									<a href="https://skimanikings.github.io/Quotes-App/" target="_blank"><button type="button" class="btn btn-sm btn-outline-dark" >Explore</button></a>
+
 								</div>
 							</a>
 						</div>
@@ -125,10 +131,12 @@
 					<div class="agileits_w3layouts_gallery_grid1 hover14 column">
 						<div class="w3_agile_gallery_effect view view-tenth">
 							<a href="images/g5.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="My Projects">
-								<img src="images/g5.jpg" alt=" " class="img-responsive" />
+								<img src="images/Delani.png" alt=" " class="img-responsive" />
 								<div class="mask">
-									<h3>My projects</h3>
-									<p>At vero eoset accusamus et iusto odio ducimus.</p>
+									<h3>Delani Studios</h3>
+									<p></p>
+									<a href="https://skimanikings.github.io/Delani-Studios/" target="_blank"><button type="button" class="btn btn-sm btn-outline-dark" >Explore</button></a>
+
 								</div>
 							</a>
 						</div>
@@ -138,10 +146,12 @@
 					<div class="agileits_w3layouts_gallery_grid1 w3layouts_gallery_grid1 hover14 column">
 						<div class="w3_agile_gallery_effect view view-tenth">
 							<a href="images/g6.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="My Projects">
-								<img src="images/g6.jpg" alt=" " class="img-responsive" />
+								<img src="images/Picasa.png" alt=" " class="img-responsive" />
 								<div class="mask">
-									<h3>My projects</h3>
-									<p>At vero eoset accusamus et iusto odio ducimus.</p>
+									<h3>Picasa</h3>
+									<p>It displays Random images that are displayed on the the home page.</p>
+
+									<a href="https://picasagalla.herokuapp.com/" target="_blank"><button type="button" class="btn btn-sm btn-outline-dark" >Explore</button></a>
 								</div>
 							</a>
 						</div>
@@ -149,10 +159,12 @@
 					<div class="agileits_w3layouts_gallery_grid1 hover14 column">
 						<div class="w3_agile_gallery_effect view view-tenth">
 							<a href="images/g7.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="My Projects">
-								<img src="images/g7.jpg" alt=" " class="img-responsive" />
+								<img src="images/Pizza.png" alt=" " class="img-responsive" />
 								<div class="mask">
-									<h3>My projects</h3>
-									<p>At vero eoset accusamus et iusto odio ducimus.</p>
+									<h3>Pizza</h3>
+									<p>Order your Pizza Asap.</p>
+									<a href="https://skimanikings.github.io/Pizza-Empire-/" target="_blank"><button type="button" class="btn btn-sm btn-outline-dark" >Explore</button></a>
+
 								</div>
 							</a>
 						</div>
@@ -160,14 +172,17 @@
 					<div class="agileits_w3layouts_gallery_grid1 hover14 column">
 						<div class="w3_agile_gallery_effect view view-tenth">
 							<a href="images/g8.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="My Projects">
-								<img src="images/g8.jpg" alt=" " class="img-responsive" />
+								<img src="images/News.png" alt=" " class="img-responsive" />
 								<div class="mask">
-									<h3>My projects</h3>
-									<p>At vero eoset accusamus et iusto odio ducimus.</p>
+									<h3>News-Highlight</h3>
+									<p>Be the first to know.</p>
+									<a href="https://kimaninews.herokuapp.com/" target="_blank"><button type="button" class="btn btn-sm btn-outline-dark" >Explore</button></a>
+
 								</div>
 							</a>
 						</div>
 					</div>
+					
 				</div>
 				<div class="clearfix"> </div>
 			</div> 
