--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,6 @@
 								<li><a href="index.html"> Home</a></li>
 								<li><a href="about.html"> About</a></li>  
 								<li><a href="skills.html"> Skills</a></li>
-								<li><a href="experience.html">Experience</a></li> 
 								<li><a href="education.html">Education</a></li>
 								<li><a href="projects.html"> My Projects</a></li>							
 								<li><a href="contact.html" class="active"> Contact Us</a></li>
@@ -48,7 +47,7 @@
 						<a href="#" class="social-button twitter"><i class="fa fa-twitter"></i></a>
 						<a href="#" class="social-button facebook"><i class="fa fa-facebook"></i></a> 
 						<a href="#" class="social-button google"><i class="fa fa-google-plus"></i></a> 
-						<a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a> 
+						<a href="#" class="social-button dribbble"><i class="fa fa-linkedin "></i></a> 
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -72,7 +71,7 @@
 			<div class="w3ls-title">
 				<h2 class="agileits-title">Contact Me</h2>
 			</div>
-			<div class="contact-agileinfo">
+			<!-- <div class="contact-agileinfo">
 				<div class="col-md-7 w3agile-contact-grids">
 					<div class="ctact-w3left">
 						<form action="#" method="post">
@@ -97,20 +96,19 @@
 							</div>
 						</form>
 					</div>
-				</div> 
-				<div class="col-md-5 w3agile-contact-grids"> 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit vivamus sed accumsan quam a mollis magna.</p>
+				</div>  -->
+				<div class="col-md-8 w3agile-contact-grids"> 
+					<p> Want some clarifications? Intrested in my works? Or just wanna get some lunch? </p>
+					<p>Feel free to reach me through any of my social accounts.</p>
 					<div class="profile-grids">  
 						<h5>Contact Info</h5>
 						<ul> 
 							<li> 
-								<b>PHONE</b> : +01 111 222 3333
+								<b>PHONE</b> : (+254)713813919
 							</li> 
+						
 							<li> 
-								<b>FAX</b> :  +15 555 5678
-							</li> 
-							<li> 
-								<b>ADDRESS</b> : 756 gb Place,NS Canada 
+								<b>ADDRESS</b> : 235 Kasarani, Nairobi
 							</li>
 						</ul>
 					</div>
@@ -118,14 +116,20 @@
 						<h5>Social Media Info</h5>
 						<ul> 
 							<li> 
-								<b>E-MAIL</b> : <a href="mailto:example@mail.com"> mail@example.com</a>
+								<b>EMAIL</b> : <a href="mailto:example@mail.com"> kimanisimon856@gmail.com</a>
 							</li>
 							<li> 
-								<b>WEBSITE</b> : <a href="#">www.myresume.com</a>
+								<b>FACEBOOK</b> : <a href="#">Simon Kimani</a>
 							</li>
 							<li> 
-								<b>TWITTER</b> : <a href="#">example@twitter</a>
+								<b>TWITTER</b> : <a href="#">Simon Kimani</a>
 							</li> 
+							<li> 
+								<b>GITHUB</b> : <a href="#">Simon Kimani</a>
+							</li>
+							<li> 
+								<b>LINKDIN</b> : <a href="#">Simon Kimani</a>
+							</li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div> 
