--- a/experience.html
+++ b/experience.html
@@ -37,7 +37,6 @@
 								<li><a href="index.html"> Home</a></li>
 								<li><a href="about.html"> About</a></li>  
 								<li><a href="skills.html"> Skills</a></li>
-								<li><a href="experience.html" class="active">Experience</a></li> 
 								<li><a href="education.html">Education</a></li>
 								<li><a href="projects.html"> My Projects</a></li>							
 								<li><a href="contact.html"> Contact Us</a></li>
@@ -48,7 +47,7 @@
 						<a href="#" class="social-button twitter"><i class="fa fa-twitter"></i></a>
 						<a href="#" class="social-button facebook"><i class="fa fa-facebook"></i></a> 
 						<a href="#" class="social-button google"><i class="fa fa-google-plus"></i></a> 
-						<a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a> 
+						<a href="#" class="social-button dribbble"><i class="fa fa-linkedin"></i></a> 
 					</div>
 					<div class="clearfix"> </div>
 				</div>
