--- a/about.html
+++ b/about.html
@@ -37,7 +37,6 @@
 								<li><a href="index.html"> Home</a></li>
 								<li><a href="about.html" class="active"> About</a></li>  
 								<li><a href="skills.html"> Skills</a></li>
-								<li><a href="education.html">Education</a></li>
 								<li><a href="projects.html"> My Projects</a></li>							
 								<li><a href="contact.html"> Contact Us</a></li>
 							</ul>
@@ -73,44 +72,13 @@
 			</div>
 			<div class="about-agileinfo"> 
 				<div class="col-md-4 col-sm-4 about-left ">
-					<img src="images/img1.jpg" class="img-responsive" alt=""/>
+					<img src="images/myAvatar.png" class="img-responsive" alt=""/>
 				</div>
 				<div class="col-md-8 col-sm-8 about-right wthree">
 					<h3>Hi, i'm <span>Simon Kimani</span></h3>
-					<h4>Web Designer & Developer </h4>
-					<!-- <ul class="address">
-						<li>
-							<ul class="agileits-address-text ">
-								<li><b>D.O.B :</b></li>
-								<li>11-09-1998</li>
-							</ul>
-						</li>
-						<li>
-							<ul class="agileits-address-text">
-								<li><b>PHONE : </b></li>
-								<li>+(254) 713813919</li>
-							</ul>
-						</li>
-						<li>
-							<ul class="agileits-address-text">
-								<li><b>ADDRESS :</b></li>
-								<li>235,Kasarani, Nairobi</li>
-							</ul>
-						</li>
-						<li>
-							<ul class="agileits-address-text">
-								<li><b>E-MAIL :</b></li>
-								<li><a href="mailto:example@mail.com"> kimanisimon856@gmail.com</a></li>
-							</ul>
-						</li>
-						<li>
-							<ul class="agileits-address-text">
-								<li><b>WEBSITE :</b></li>
-								<li><a href="http://w3layouts.com">www.myresume.com</a></li>
-							</ul>
-						</li>
-					</ul>  -->
-					<p class="first">Am always pushing myself to grow
+					<h4 style="color: black;">Web Designer & Developer </h4>
+
+					<p class="first" style="color: black;">Am always pushing myself to grow
 						by setting firm goals for myself. Then, once I've defined the benchmarks, I take the necessary steps to achieve
 						those milestones.<br>Am someone who demonstrates an unwavering resolve to do whatever must be done to produce the
 						best short-term and
