--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,6 @@
 								<li><a href="index.html"> Home</a></li>
 								<li><a href="about.html"> About</a></li>  
 								<li><a href="skills.html"> Skills</a></li>
-								<li><a href="education.html">Education</a></li>
 								<li><a href="projects.html"> My Projects</a></li>							
 								<li><a href="contact.html" class="active"> Contact Us</a></li>
 							</ul>
@@ -71,35 +70,10 @@
 			<div class="w3ls-title">
 				<h2 class="agileits-title">Contact Me</h2>
 			</div>
-			<!-- <div class="contact-agileinfo">
-				<div class="col-md-7 w3agile-contact-grids">
-					<div class="ctact-w3left">
-						<form action="#" method="post">
-							<span>
-								<i>Name</i>
-								<input type="text" name="Name" placeholder="" required="">
-							</span>
-							<span>
-								<i>Email</i>
-								<input type="email" name="Email" placeholder="" required="">
-							</span>
-							<span>
-								<i>Subject</i>
-								<input type="text" name="Subject" placeholder="" required="">
-							</span>
-							<span>
-								<i>Message</i>
-								<textarea name="Message" placeholder="" required=""></textarea>
-							</span>
-							<div class="w3_submit">
-								<input type="submit" value="Submit Now">
-							</div>
-						</form>
-					</div>
-				</div>  -->
+			
 				<div class="col-md-8 w3agile-contact-grids"> 
-					<p> Want some clarifications? Intrested in my works? Or just wanna get some lunch? </p>
-					<p>Feel free to reach me through any of my social accounts.</p>
+					<p style="color: black;"> Want some clarifications? Intrested in my works? Or just wanna get some lunch? </p>
+					<p style="color: black;">Feel free to reach me through any of my social accounts.</p>
 					<div class="profile-grids">  
 						<h5>Contact Info</h5>
 						<ul> 
