--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,6 @@
 			<div class="header">
 				<div class="container">
 					<div class="logo">
-						<h1><a href="index.html">Simon</a></h1>
 					</div> 
 					<div class="menu">
 						<a href="#" class="navicon"></a> 
@@ -90,7 +89,7 @@
 						<h5>Social Media Info</h5>
 						<ul> 
 							<li> 
-								<b>EMAIL</b> : <a href="mailto:example@mail.com"> kimanisimon856@gmail.com</a>
+								<b>EMAIL</b> : <a href="#"> kimanisimon856@gmail.com</a>
 							</li>
 							<li> 
 								<b>FACEBOOK</b> : <a href="#">Simon Kimani</a>
