--- a/contact.html
+++ b/contact.html
@@ -77,11 +77,11 @@
 						<h5>Contact Info</h5>
 						<ul> 
 							<li> 
-								<b>PHONE</b> : (+254)713813919
+								<b style="color: black;">PHONE</b> : (+254)713813919
 							</li> 
 						
 							<li> 
-								<b>ADDRESS</b> : 235 Kasarani, Nairobi
+								<b style="color: black;">ADDRESS</b> : 235 Kasarani, Nairobi
 							</li>
 						</ul>
 					</div>
@@ -89,19 +89,19 @@
 						<h5>Social Media Info</h5>
 						<ul> 
 							<li> 
-								<b>EMAIL</b> : <a href="#"> kimanisimon856@gmail.com</a>
+								<b style="color: black;">EMAIL</b> : <a href="#"> kimanisimon856@gmail.com</a>
 							</li>
 							<li> 
-								<b>FACEBOOK</b> : <a href="#">Simon Kimani</a>
+								<b style="color: black;">FACEBOOK</b> : <a href="#">Simon Kimani</a>
 							</li>
 							<li> 
-								<b>TWITTER</b> : <a href="#">Simon Kimani</a>
+								<b style="color: black;">TWITTER</b> : <a href="#">Simon Kimani</a>
 							</li> 
 							<li> 
-								<b>GITHUB</b> : <a href="#">Simon Kimani</a>
+								<b style="color: black;">GITHUB</b> : <a href="#">Simon Kimani</a>
 							</li>
 							<li> 
-								<b>LINKDIN</b> : <a href="#">Simon Kimani</a>
+								<b style="color: black;">LINKDIN</b> : <a href="#">Simon Kimani</a>
 							</li>
 						</ul>
 					</div>
