push to githubb

--- a/contact.html
+++ b/contact.html
@@ -76,11 +76,11 @@
 					<div class="profile-grids">  
 						<h5>Contact Info</h5>
 						<ul> 
-							<li> 
+							<li style="color: black;"> 
 								<b style="color: black;">PHONE</b> : (+254)713813919
 							</li> 
 						
-							<li> 
+							<li style="color: black;"> 
 								<b style="color: black;">ADDRESS</b> : 235 Kasarani, Nairobi
 							</li>
 						</ul>
@@ -88,19 +88,19 @@
 					<div class="profile-grids">  
 						<h5>Social Media Info</h5>
 						<ul> 
-							<li> 
+							<li style="color: black;"> 
 								<b style="color: black;">EMAIL</b> : <a href="#"> kimanisimon856@gmail.com</a>
 							</li>
 							<li> 
 								<b style="color: black;">FACEBOOK</b> : <a href="#">Simon Kimani</a>
 							</li>
-							<li> 
+							<li style="color: black;"> 
 								<b style="color: black;">TWITTER</b> : <a href="#">Simon Kimani</a>
 							</li> 
-							<li> 
+							<li style="color: black;">  
 								<b style="color: black;">GITHUB</b> : <a href="#">Simon Kimani</a>
 							</li>
-							<li> 
+							<li style="color: black;"> 
 								<b style="color: black;">LINKDIN</b> : <a href="#">Simon Kimani</a>
 							</li>
 						</ul>
