push to githubb

--- a/contact.html
+++ b/contact.html
@@ -89,19 +89,19 @@
 						<h5>Social Media Info</h5>
 						<ul> 
 							<li style="color: black;"> 
-								<b style="color: black;">EMAIL</b> : <a href="#"> kimanisimon856@gmail.com</a>
+								<b style="color: black;">EMAIL</b> : <a href="#" style="color: black;" ></a> kimanisimon856@gmail.com
 							</li>
 							<li> 
-								<b style="color: black;">FACEBOOK</b> : <a href="#">Simon Kimani</a>
+								<b style="color: black;">FACEBOOK</b> : <a href="#" style="color: black;" >Simon Kimani</a>
 							</li>
 							<li style="color: black;"> 
-								<b style="color: black;">TWITTER</b> : <a href="#">Simon Kimani</a>
+								<b style="color: black;">TWITTER</b> : <a href="#" style="color: black;" >Simon Kimani</a>
 							</li> 
 							<li style="color: black;">  
-								<b style="color: black;">GITHUB</b> : <a href="#">Simon Kimani</a>
+								<b style="color: black;">GITHUB</b> : <a href="#" style="color: black;" >Simon Kimani</a>
 							</li>
 							<li style="color: black;"> 
-								<b style="color: black;">LINKDIN</b> : <a href="#">Simon Kimani</a>
+								<b style="color: black;">LINKDIN</b> : <a href="#" style="color: black;" >Simon Kimani</a>
 							</li>
 						</ul>
 					</div>
