--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
 			</div>
 			
 				<div class="col-md-8 w3agile-contact-grids"> 
-					<p style="color: black;"> Want some clarifications? Intrested in my works? Or just wanna get some lunch? </p>
-					<p style="color: black;">Feel free to reach me through any of my social accounts.</p>
+					<p style="color: black;" class="second"> Want some clarifications? Intrested in my works? Or just wanna get some lunch? </p>
+					<p style="color: black;" class="second">Feel free to reach me through any of my social accounts.</p>
 					<div class="profile-grids">  
 						<h5>Contact Info</h5>
 						<ul> 
