--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="col-md-8 col-sm-8 about-right wthree">
 					<h3>Hi, i'm <span>Simon Kimani</span></h3>
-					<h4 style="color: black;">Web Designer & Developer </h4>
+					<h4 style="color: black;" class="third">Web Designer & Developer </h4>
 
 					<p class="first" style="color: black;">Am always pushing myself to grow
 						by setting firm goals for myself. Then, once I've defined the benchmarks, I take the necessary steps to achieve
